# Legal_Assistant

./: .gitignore  LICENSE  README.md  generate_content_task.py  generate_faqs_task.py  generate_questions_task.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
apps/: assistant.py  dashboard.py
config/: database.py  settings.py
src/: document_processor.py  faq_generator.py  graph.py  nodes.py  prompts.py  question_generator.py  tasks.py  tools.py  vector_store.py  workflow.py
